<resources>
    <string name="app_name">Toko Laptop</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="belum_punya_akun">Belum punya Akun?</string>
    <string name="daftar_di_sini">Daftar di Sini</string>
    <!-- Strings used for fragments for navigation -->

    <string name="register">REGISTER</string>
    <string name="nama">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="masuk_di_sini">Masuk di Sini</string>
    <string name="sudah_punya_akun">Sudah punya Akun?</string>
    <string name="kenjiro">Kenjiro</string>
    <string name="search_here">Search here</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lupa_password">Lupa Password?</string>
    <string name="brands_sign">BRANDS</string>
    <string name="best_seller_sign">BEST SELLER</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_name">Product Name</string>
    <string name="settings">Settings</string>
    <string name="wishlist">Wishlist</string>

    <!--  LOREMS  -->
    <string name="categories">Categories</string>
    <string name="view_all">View all</string>
    <string name="dashboard_welcome">Good Day,</string>
    <string name="back_button">Back Button</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="list_produk">List Produk</string>
    <string name="filter">Filter</string>
    <string name="fav_btn">Make it Favorite</string>
    <string name="product_image">Product Image</string>
    <string name="buy_now">Buy Now</string>
    <string name="rating">Rating</string>
    <string name="work_time">WORK TIME</string>
    <string name="it_s">It\'s</string>
    <string name="log_out">Log Out</string>
    <string name="user_picture">User Picture</string>
    <string name="kenjiro_lehot">Kenjiro Lehot</string>
    <string name="splash_image">Splash Image</string>
    <string name="keranjang">Keranjang</string>
    <string name="icon_delete">Icon Delete</string>
    <string name="sub_total">Sub Total</string>
    <string name="harga_sub_total">Rp 8.000.000</string>
    <string name="ongkos_kirim">Ongkos Kirim</string>
    <string name="harga_ongkos_kirim">Rp 100.000</string>
    <string name="total">Total</string>
    <string name="harga_total">Rp 8.100.000</string>
    <string name="checkout">Checkout</string>
    <string name="kategori_1">Gaming</string>
    <string name="kategori_2">Work</string>
    <string name="kategori_3">Convertible</string>
    <string name="kategori_4">Notebook</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icons">Icons</string>
    <string name="logo_toko">Logo Toko</string>
    <string name="row_head_1">Spesifikasi</string>
    <string name="row_head_2">Keterangan</string>
    <string name="spek_1">CPU</string>
    <string name="ket_spek_1">AMD RYZEN 3 3250U 2.60ghZ up to 3.50GHz</string>
    <string name="spek_2">RAM</string>
    <string name="ket_spek_2">8GB DDR4</string>
    <string name="spek_3">Storage</string>
    <string name="ket_spek_3">SSD 256GB</string>
    <string name="spek_4">OS</string>
    <string name="ket_spek_4">Windows 10</string>
    <string name="detailFrgBtn1">Deskripsi</string>
    <string name="detailFrgBtn2">Toko</string>
    <string name="selamat">Selamat.</string>
    <string name="pesanan_anda_diterima">Pesanan Anda Diterima !</string>
    <string name="txt_pesan_sukses">Harap bersabar, pesanan Anda akan tiba dalam 3 hari lagi</string>
    <string name="kembali_ke_dashboard"><u>kembali ke dashboard</u></string>
</resources>