<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/custom_bg"
    android:scrollbars="none"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/loginHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="25dp"
        android:paddingTop="20dp"
        android:orientation="vertical"
        android:layout_below="@+id/loginHeader"
        android:background="@drawable/login_bg">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/custom_text"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/nama"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSignInName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/white"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSignInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="#757575" />

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"
                android:fontFamily="sans-serif-black"
                android:paddingHorizontal="100dp"
                android:paddingVertical="10dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/lupa_password"
                android:textColor="@color/custom_text"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/belum_punya_akun"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/daftar_di_sini"
                android:textColor="@color/custom_text"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>