<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ListProdukActivity">

    <LinearLayout
        android:id="@+id/layoutBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/categoryLayout"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/back"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_gravity="left"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back_button"
            app:tint="@color/black"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="38dp"
            android:fontFamily="@font/bebas_neue"
            android:gravity="center"
            android:text="@string/list_produk"
            android:textColor="@color/black"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/categoryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layoutBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/categorySign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/bebas_neue"
                android:gravity="start"
                android:text="@string/categories"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/baloo_tamma"
                android:gravity="end"
                android:text="@string/view_all"
                android:textColor="@color/custom_text"
                android:textSize="15sp" />

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/categoryScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="1dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_category"
                    android:src="@drawable/ic_filter"
                    android:contentDescription="@string/filter" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="Gaming"
                    android:textSize="18sp"
                    android:fontFamily="@font/baloo_tamma"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_category"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="Work"
                    android:textSize="18sp"
                    android:fontFamily="@font/baloo_tamma"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_category"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:text="Convertible"
                    android:textSize="18sp"
                    android:fontFamily="@font/baloo_tamma"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_category"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:gravity="center"
                    android:text="Notebook"
                    android:textSize="18sp"
                    android:fontFamily="@font/baloo_tamma"
                    android:textColor="@color/black"
                    android:background="@drawable/bg_category"/>
            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>